--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,12 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.7.5</version>
-        </dependency>        
+        </dependency>
+        <dependency>
+            <groupId>com.github.maltalex</groupId>
+            <artifactId>ineter</artifactId>
+            <version>0.3.1</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
