--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>net.optionfactory</groupId>
     <artifactId>ineter-postgres</artifactId>
     <description>ineter-postgres</description>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
     <packaging>jar</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
     <url>https://github.com/optionfactory/ineter-postgres</url>
