--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,7 @@
     </build>
     <profiles>
         <profile>
-            <id>ossrh</id>
+            <id>central</id>
             <build>
                 <plugins>
                     <plugin>
@@ -208,6 +208,18 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <version>0.7.0</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <publishingServerId>central</publishingServerId>
+                            <autoPublish>true</autoPublish>
+                            <waitUntil>published</waitUntil>
+                            <deploymentName>ineter-postgres:${project.version}</deploymentName>
+                        </configuration>
+                    </plugin>                    
                 </plugins>
             </build>
         </profile>
