--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>net.optionfactory</groupId>
     <artifactId>ineter-postgres</artifactId>
     <description>ineter-postgres</description>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
     <url>https://github.com/optionfactory/ineter-postgres</url>
@@ -61,7 +61,7 @@
             <dependency>
                 <groupId>net.optionfactory.spring</groupId>
                 <artifactId>optionfactory-spring-bom</artifactId>
-                <version>22.3</version>
+                <version>22.4</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
